Finalized small project, everything working simply run the index.html file in any web-browser

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form> 
             <p> What is your bill total?</p>
             <div class= "billAmountInput">
-                <input class="billAmt" type="text" placeholder="Bill amount">
+                <input class="billAmt" type="text" placeholder="Bill Amount">
             </div>
             <p>How was your service?</p>
             <div class = "service">
@@ -28,7 +28,7 @@
                     <option value="0.2">20% Good</option>
                     <option value="0.15">15% It was Ok</option>
                     <option value="0.1">10% Bad </option>
-                    <option value="0.05">5% Horrible</option>
+                    <option value="0.05"> &zwnj; &zwnj;5% &zwnj; Horrible</option>
                 </select>
             </div>
         </form>
@@ -37,7 +37,7 @@
         <div class="peopleAmtInput">
             <input class="peopleAmt" type="text" placeholder="Number of People">
         </div>
-        <button id="calculate">Calculate!</button>
+        <button id="calculate">Calculate</button>
 
         <!-- CALCULATOR ENDS NOW SPACE FOR TOTALS -->
 
